Fix overflow

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -25,6 +25,7 @@ html {
 body {
   background-color: black;
   color: white;
+  overflow-x: hidden;
 }
 
 * {
